# kiln

./: .gitignore  FUTURE_TOOLS.md  README.md
mcp-server/: package-lock.json  package.json
mcp-server/src/: index.ts
mcp-server/src/tools/: addPackage.ts  buildProject.ts  createAnimation.ts  createGameObject.ts  createScript.ts  deleteGameObject.ts  describeScene.ts  duplicateGameObject.ts  editScript.ts  explainError.ts  explainScene.ts  focusGameObject.ts  getProjectSummary.ts  importAsset.ts  listSaves.ts  loadSave.ts  modifyGameObject.ts  playMode.ts  readScript.ts  save.ts  screenshot.ts  searchPolyPizza.ts  searchSketchfab.ts  setTransform.ts
mcp-server/src/unity-bridge/: connection.ts  types.ts
research/: accessibility-ux-patterns.md  ai-gamedev-landscape.md  system-architecture.md  unity-mcp-analysis.md  voice-io-analysis.md
unity-package/: package.json
unity-package/Editor/: com.devframework.mcp.editor.asmdef
unity-package/Editor/Core/: DevFrameworkServer.cs  KilnServer.cs  MainThreadDispatcher.cs  MessageRouter.cs
unity-package/Editor/Tools/: AddPackageTool.cs  BuildProjectTool.cs  CreateAnimationTool.cs  (+21 more)
unity-package/Runtime/: com.devframework.mcp.runtime.asmdef
voice-app/: pyproject.toml
voice-app/src/kiln_voice/: __init__.py  app.py  config.py  main.py
voice-app/src/kiln_voice/audio/: capture.py  playback.py  vad.py
voice-app/src/kiln_voice/claude/: claude_code.py  system_prompt.py
voice-app/src/kiln_voice/stt/: deepgram_stt.py
voice-app/src/kiln_voice/tts/: cartesia_tts.py
voice-app/src/kiln_voice/ui/: theme.py  window.py
(+1 files in other folders)
